<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MainActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/address"
		android:id="@+id/textView"/>

	<EditText
		android:id="@+id/address_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textEmailAddress"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/password"
		android:id="@+id/textView2"/>

	<EditText
		android:id="@+id/password_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/address_edittext"
		android:ems="10"
		android:inputType="textPassword"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/save_password"
			android:id="@+id/save_password_checkBox"
			/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/get_info"
			android:id="@+id/get_info_button"
			android:layout_alignParentRight="true"/>
	</RelativeLayout>

	<ListView
		android:id="@+id/listView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/password_edittext"
		android:layout_centerHorizontal="true"/>

	<TextView
		android:id="@+id/empty"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:text="@string/empty_publish"/>
</LinearLayout>
